Closed Bug 851897 Opened 11 years ago Closed 11 years ago

crash in mozilla::widget::nsWinMetroUtils::GetActivationURI @ nsAString_internal::Assign

Categories

(Core Graveyard :: Widget: WinRT, defect)

x86
Windows 8.1
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED
mozilla22

People

(Reporter: scoobidiver, Assigned: bbondy)

References

Details

(Keywords: crash, Whiteboard: [metro-crash][startupcrash])

Crash Data

Attachments

(1 file)

It has been hit by one user several times at startup.
The GPU is VMware SVGA II.

Signature 	nsAString_internal::Assign(nsAString_internal const&, mozilla::fallible_t const&) More Reports Search
UUID	ca20d3c0-aa9e-466b-811a-d4d2e2130317
Date Processed	2013-03-17 08:21:42
Uptime	13
Install Age	13 seconds since version was first installed.
Install Time	2013-03-17 08:21:18
Product	MetroFirefox
Version	22.0a1
Build ID	20130316160554
Release Channel	nightly
OS	Windows NT
OS Version	6.2.9200
Build Architecture	x86
Build Architecture Info	GenuineIntel family 6 model 15 stepping 2
Crash Reason	EXCEPTION_ACCESS_VIOLATION_READ
Crash Address	0xb0
App Notes	
AdapterVendorID: 0x15ad, AdapterDeviceID: 0x0405, AdapterSubsysID: 040515ad, AdapterDriverVersion: 7.14.1.1211
D3D10 Layers? D3D10 Layers- 
Processor Notes 	sp-processor04.phx1.mozilla.com_23613:2008
EMCheckCompatibility	True
Adapter Vendor ID	0x15ad
Adapter Device ID	0x0405
Total Virtual Memory	2147352576
Available Virtual Memory	1939808256
System Memory Use Percentage	62
Available Page File	1149296640
Available Physical Memory	400941056
Accessibility	Active

Frame 	Module 	Signature 	Source
0 	xul.dll 	nsAString_internal::Assign 	xpcom/string/src/nsTSubstring.cpp:360
1 	xul.dll 	nsAString_internal::Assign 	xpcom/string/src/nsTSubstring.cpp:347
2 	xul.dll 	nsAutoString::operator= 	obj-firefox/dist/include/nsTString.h:488
3 	xul.dll 	mozilla::widget::nsWinMetroUtils::GetActivationURI 	widget/windows/winrt/nsWinMetroUtils.cpp:415
4 	xul.dll 	NS_InvokeByIndex_P 	xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp:70
5 	xul.dll 	XPC_WN_GetterSetter 	js/xpconnect/src/XPCWrappedNativeJSOps.cpp:1465
6 	mozjs.dll 	js::InvokeKernel 	js/src/jsinterp.cpp:384
7 	mozjs.dll 	js::Invoke 	js/src/jsinterp.cpp:431
8 	mozjs.dll 	js::GetPropertyOperation 	js/src/jsinterpinlines.h:295
9 	mozjs.dll 	js::Interpret 	js/src/jsinterp.cpp:2247
10 	mozjs.dll 	js::RunScript 	js/src/jsinterp.cpp:341
11 	mozjs.dll 	js::InvokeKernel 	js/src/jsinterp.cpp:398
12 	mozjs.dll 	js::Invoke 	js/src/jsinterp.cpp:431
13 	mozjs.dll 	JS_CallFunctionValue 	js/src/jsapi.cpp:5743
14 	xul.dll 	mozilla::dom::EventHandlerNonNull::Call 	obj-firefox/dom/bindings/EventHandlerBinding.cpp:51
15 	xul.dll 	mozilla::dom::EventHandlerNonNull::Call<nsISupports*> 	obj-firefox/dist/include/mozilla/dom/EventHandlerBinding.h:59
16 	xul.dll 	nsJSEventListener::HandleEvent 	dom/src/events/nsJSEventListener.cpp:250
17 	xul.dll 	nsEventListenerManager::HandleEventInternal 	content/events/src/nsEventListenerManager.cpp:994
...

More reports at:
https://crash-stats.mozilla.com/report/list?product=MetroFirefox&signature=nsAString_internal%3A%3AAssign%28nsAString_internal+const%26%2C+mozilla%3A%3Afallible_t+const%26%29
Blocks: 831609
Attached patch Patch v1.Splinter Review
I didn't return an error there just to avoid uglifying some front end code.
Assignee: nobody → netzen
Attachment #726160 - Flags: review?(jmathies)
Attachment #726160 - Flags: review?(jmathies) → review+
https://hg.mozilla.org/mozilla-central/rev/240dc14b1b87
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
OS: Windows 8 Metro → Windows 8.1
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: