Bug 851897 - Fix crash in mozilla::widget::nsWinMetroUtils::GetActivationURI. r=jimm